--- a/app/assets/stylesheets/app/b-report.css
+++ b/app/assets/stylesheets/app/b-report.css
@@ -18,7 +18,7 @@
 	background: -webkit-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* Chrome10+,Safari5.1+ */
 	background: -o-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f1f1f1',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #fff 0%,#f1f1f1 100%); /* W3C */                    
 	
 	-webkit-box-shadow: none;
@@ -35,7 +35,7 @@
 	background: -webkit-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* Chrome10+,Safari5.1+ */
 	background: -o-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #fff 0%,#f1f1f1 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f1f1f1',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #fff 0%,#f1f1f1 100%); /* W3C */
 }
 
@@ -56,7 +56,7 @@
 	background: -webkit-linear-gradient(top, #f1f1f1 0%,#fff 70%); /* Chrome10+,Safari5.1+ */
 	background: -o-linear-gradient(top, #f1f1f1 0%,#fff 70%); /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #f1f1f1 0%,#fff 70%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#fff',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #f1f1f1 0%,#fff 70%); /* W3C */
 }
 
