--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
  
   <!-- jQuery & jQuery UI -->
   <%= stylesheet_link_tag "application" %>
-  
+  <!--[if IE 7]>    <%= stylesheet_link_tag "application_ie" %> <![endif]-->
   <%= javascript_include_tag "application" %>    
 
   <script>
@@ -97,7 +97,7 @@
 						<p class="t-medium">Войдите через</p>
 						<div class="p-main-socials">         
 	                    <% omniauth_providers.each do |provider| %>
-	                      <button class="b-auth__button b-auth__action b-button_social" provider="<%= provider %>" url="<%= user_omniauth_authorize_path(provider) %>" data-width="600" data-height="400">
+	                      <button class="b-auth__button b-auth__action b-button_social" provider="<%= provider %>" url="<%= user_omniauth_authorize_path(provider) %>" data-width="600" data-height="400"></button>
 	                    <% end %>
 						</div>
 						<p class="t-medium">или укажите электронную почту</p>   
