--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -55,8 +55,8 @@ $(function(){
     <%= f.label :man_birthday, "Фотографии", :class => "b-form__label" %>
     <div class="l-left">
         <div class="b-form__button_corner ui-corner-all">
-           <input id="add_photo" type="button" value="Добавить" class="t-medium">
-           <input id="upload_photo" name="missing_upload_photo" type="hidden" value=0>
+           <input id="add_photo" type="button" value="Добавить" class="t-medium" />
+           <input id="upload_photo" name="missing_upload_photo" type="hidden" value=0 />
         </div>
         <div class="b-missing__add_photo_description t-small">
           Добавьте минимум две фотографии:
@@ -65,29 +65,26 @@ $(function(){
              <li>Где хорошо видно лицо</li>
            </ul>
         </div>
-   </div>
+    </div>
 	
-
-	<ul class="b-form__photos grid_13">
-	<%= f.fields_for :photos do |photo_form| %> 
-	  <% if photo_form.object.new_record? %>
-		<li class="b-form__photo_field">
-	    <%= photo_form.file_field :photo, :class => "invisible" %>
-	 	</li>
-	  <% else %>
-	    <li class="b-form__photo">
-			<%= image_tag photo_form.object.photo.url(:small), :size => "100x100", :class => "b-form__photo" %>
-			<%= tag :input, { :type => "button", :value => "удалить", :class => "b-form__photo_delete red_action destroy" } %>
-      <%= photo_form.hidden_field :id %>
-      <%= photo_form.hidden_field :_destroy %>
-		  </li>
+	  <ul class="b-form__photos grid_13">
+    <%= f.fields_for :photos do |photo_form| %> 
+      <% if photo_form.object.new_record? %>
+      <li class="b-form__photo_field">
+        <%= photo_form.file_field :photo, :class => "invisible" %>
+      </li>
+      <% else %>
+        <li class="b-form__photo">
+        <%= image_tag photo_form.object.photo.url(:small), :size => "100x100", :class => "b-form__photo" %>
+        <%= tag :input, { :type => "button", :value => "удалить", :class => "b-form__photo_delete red_action destroy" } %>
+        <%= photo_form.hidden_field :id %>
+        <%= photo_form.hidden_field :_destroy %>
+        </li>
+      <% end %>
     <% end %>
-          
-
-  <% end %>
-	</ul>
+    </ul>
 	
-	
-	<div class="clear"></div>
   </div>
+    <div class="clear"></div>
+
 <!-- Container and grid_8 div closed in new.html.erb -->
