--- a/app/assets/stylesheets/app/b-buttons.css.erb
+++ b/app/assets/stylesheets/app/b-buttons.css.erb
@@ -25,6 +25,8 @@
 	background-position: 95% 60%;
 
 	font-weight: bold;
+
+    min-width: 63px;
 }      
 
 .b-auth__button.loggedin .ui-button-text {
