Edit search, add search similars in add missing

--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -576,5 +576,21 @@ div.b-missing__tabs {
       margin: -1em 0 1em;
     }
 
+.p-new-missing__allready_missing {
+	position: absolute;
+	left: 400px;
+	
+	width: 300px;
+}
 
+      
+.p-new-missing__similars a {
+	display: block;
+	margin-bottom: .5em;
+}                       
 
+.p-new-missing__similars a img {
+	width: 40px;
+	vertical-align: middle;
+	margin-right: 5px;
+}
