--- a/app/assets/stylesheets/app/b-search.css
+++ b/app/assets/stylesheets/app/b-search.css
@@ -10,26 +10,38 @@
 }
 
 .b-search-filter {
-  width: 706px;
-  margin: 1em 0 0;
+  margin: 1em 0 0; 
+  padding-bottom: 7px !important;
 
   position: relative;
 }
-  
-input.b-search-filter__name {
-  width: 385px;
+
+.b-search-filter__search { 
+	width: 100%;
 }
+
+div.b-search-filter__search_field {
+	width: 90%;
+}              
+
+	input.b-search-filter__search_field {
+	  width: 98%; 
+	  font-size: 18px;
+	  height: 19px;
+	}
+
+.b-search-filter__search_button {
+	width: 10%;      
+}
+
 
 .b-search-filter-list {
   list-style: none;
 
   margin: 0; 
-  width: 706px;
-
 }
 	.b-search-filter-list__item {
-  	  float: left;
-      margin-right: 42px;
+      margin-top: 10px;
 	}
 
    
@@ -45,6 +57,18 @@ input.b-search-filter__name {
     .b-search-filter__ages {
       width: 24px;
     }
+      
+.p-search .b-rightside {
+	margin-top: 35px;
+}
+
+.b-search-result__more_button {
+	width: 100%;
+	height: 33px;
+	
+	margin-bottom: 1em;
+}
+
 
 .b-search-result__item {
   margin-bottom: 10px;
@@ -56,10 +80,32 @@ input.b-search-filter__name {
     }
 
     .b-search-result__field {
-      color: #666;
+      color: #666;      
+	  margin: .5em 0;
     }
+        
+ 	.b-search-result__description {
+		margin-left: 113px;
+	} 
+	
+    .b-search-result__photo {
+		position: relative;
+		float: left;
+	}
 
-    img.b-search-result__photo {
-      margin-right: 12px;
-      border: 1px solid #ccc;
-    }
+	.b-search-result__photo img + a {
+		box-shadow:inset 0px 0px 1px rgba(0,0,0,.9);
+		-webkit-box-shadow:inset 0px 0px 1px rgba(0,0,0,.9);
+		-moz-box-shadow:inset 0px 0px 1px rgba(0,0,0,.9);
+		position: absolute; 
+
+		width: 100px;
+		height: 100px;
+
+		top: 0;
+		left: 0; 
+	}​   
+
+
+
+             
