--- a/app/views/missings/_show_right_sidebar.html.erb
+++ b/app/views/missings/_show_right_sidebar.html.erb
@@ -64,7 +64,6 @@
 			</div>
 
 		<div class="clear"></div>             	
-
         <% if current_user && @missing.user.id == current_user.id && @helpers.length > 0 %>
         <div class="b-sidebar b-missing__rightside">
 
@@ -97,3 +96,5 @@
 				
 			</div>
             <% end %>
+
+</div>
