Improve questions visual view. Add skiped questions.

--- a/app/views/missings/print.html.erb
+++ b/app/views/missings/print.html.erb
@@ -101,7 +101,7 @@ window.print();
 		</td>
 		<td>
 	  <div class="b-missing-print-qr">
-	  	<img src="http://qrcode.heroku.com/create?version=6&amp;ecc=q&amp;msg=http://dev.naidutebya.ru<%= missing_path(@missing) %>"> 
+	  	<img src="http://chart.apis.google.com/chart?cht=qr&chs=300x300&chl=http://naidutebya.ru<%= missing_path(@missing) %>"> 
    	  </div>   
 		</td>
 		</tr>
