--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -29,7 +29,7 @@
 		</ul>	
 	</div>
 	
-    <div class="grid_5" type="volunteer" animate_missing="true">
+    <div class="prefix_1 grid_5" type="volunteer" animate_missing="true">
       <ul class="p-main-info-list">
         <li><%= image_tag "missing-ico.png" %></li>
         <li><h3>Начните поиск объявлений</h3></li>
@@ -106,6 +106,7 @@
 <div style="clear: both;"></div>
 
 <div class="p-main-suggest">
+                                                  
 
     <%= render :partial => 'missing_information' %>
     <%= render :partial => 'volunteer_information' %>
