--- a/app/views/main/_volunteer_information.html.erb
+++ b/app/views/main/_volunteer_information.html.erb
@@ -10,7 +10,7 @@
 			
               <% @missings.each do |missing| %>     
 			    <% if missing.photos.first %>
-                  <%= image_tag missing.photos.first.photo.url(:thumb), { :size => "30x30", "data-random" => count + rand(100), "data-url" => missing_path(missing), "data-name" => missing.short_name, "data-date" => Russian.strftime(missing.created_at, "%e %B %Y года") } %>   
+                  <%= image_tag missing.photos.first.photo.url(:thumb), { :size => "30x30", "data-random" => count + rand(100), "data-url" => url_for(missing), "data-name" => missing.short_name, "data-date" => Russian.strftime(missing.created_at, "%e %B %Y года") } %>   
 				<% end %> 
 			<% end %> 	
 
